<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_48dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_black_48dp"
            android:title="@string/nav_favourites" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/nav_logout" />

    </group>

</menu>