<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_attr_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/place_detail_container_padding"
    android:paddingEnd="@dimen/place_detail_container_padding"
    android:contentDescription="@string/attributes_explanation">

    <LinearLayout style="@style/kiddieAttributesStyle">

        <TextView
            android:id="@+id/attr_menu_label"
            style="@style/kiddieAttrLabelStyle"
            android:text="@string/attr_menu_label"
            android:labelFor="@+id/attr_menu_value"/>

        <FrameLayout
            style="@style/kiddieAttrValuesStyle">
            <View
                android:id="@+id/attr_menu_value"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_orange"
                android:tooltipText="@string/kiddie_attr_tooltip"/>
        </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:contentDescription="@null"/>

    <LinearLayout style="@style/kiddieAttributesStyle">

        <TextView
            android:id="@+id/attr_bathrooms_label"
            style="@style/kiddieAttrLabelStyle"
            android:text="@string/attr_bathrooms_label"
            android:labelFor="@+id/attr_bathrooms_value"/>

        <FrameLayout
            style="@style/kiddieAttrValuesStyle">
        <View
            android:id="@+id/attr_bathrooms_value"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_orange"
            android:tooltipText="@string/kiddie_attr_tooltip"/>
        </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:contentDescription="@null"/>

    <LinearLayout style="@style/kiddieAttributesStyle">

        <TextView
            android:id="@+id/attr_equip_rental_label"
            style="@style/kiddieAttrLabelStyle"
            android:text="@string/attr_equip_rental_label"
            android:labelFor="@+id/attr_equip_rental_value"/>

        <FrameLayout
            style="@style/kiddieAttrValuesStyle">
            <View
                android:id="@+id/attr_equip_rental_value"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_orange"
                android:tooltipText="@string/kiddie_attr_tooltip"/>
        </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:contentDescription="@null"/>

    <LinearLayout style="@style/kiddieAttributesStyle">

        <TextView
            android:id="@+id/attr_programs_label"
            style="@style/kiddieAttrLabelStyle"
            android:text="@string/attr_programs_label"
            android:labelFor="@+id/attr_programs_value"/>

        <FrameLayout
            style="@style/kiddieAttrValuesStyle">
            <View
                android:id="@+id/attr_programs_value"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_orange"
                android:tooltipText="@string/kiddie_attr_tooltip"/>
        </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:contentDescription="@null"/>

    <LinearLayout style="@style/kiddieAttributesStyle">

        <TextView
            android:id="@+id/attr_play_area_label"
            style="@style/kiddieAttrLabelStyle"
            android:text="@string/attr_play_area_label"
            android:labelFor="@+id/attr_play_area_value"/>

        <FrameLayout
            style="@style/kiddieAttrValuesStyle">
            <View
                android:id="@+id/attr_play_area_value"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_orange"
                android:tooltipText="@string/kiddie_attr_tooltip"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>