<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/review_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/review_external_padding"
        tools:context="com.example.android.kidventures.ui.ReviewActivity">

        <TextView
            android:id="@+id/review_place_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="@dimen/review_external_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/textOnAccent"
            tools:text="SF MOMA Museum"
            android:labelFor="@+id/review_place_rating"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/review_external_padding">

            <RatingBar
                android:id="@+id/review_place_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:isIndicator="false"
                android:focusable="true"
                android:numStars="@dimen/rating_num_of_stars"
                android:stepSize="@dimen/rating_step_size"
                android:contentDescription="@string/provide_rating"/>
        </FrameLayout>

        <TextView
            android:id="@+id/review_child_ages_title"
            style="@style/reviewHeadingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review_child_age_title"
            android:labelFor="@+id/child_ages_container"/>

        <FrameLayout
            android:id="@+id/child_ages_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/review_external_padding"
            android:paddingStart="@dimen/review_external_padding" >

            <include layout="@layout/preference_child_ages" />
        </FrameLayout>

        <TextView
            android:id="@+id/review_attr_title"
            style="@style/reviewHeadingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/review_external_padding"
            android:text="@string/review_attr_title"
            android:labelFor="@+id/ll_attr_container"/>

        <LinearLayout
            android:id="@+id/ll_attr_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/review_external_padding"
            android:orientation="vertical"
            android:paddingEnd="@dimen/review_external_padding"
            android:paddingStart="@dimen/review_external_padding">

            <LinearLayout style="@style/kiddieAttributesStyle">

                <TextView
                    android:id="@+id/attr_menu_label"
                    style="@style/kiddieAttrLabelStyle"
                    android:text="@string/attr_menu_label"
                    android:labelFor="@+id/attr_spinner_menu"/>

                <Spinner
                    android:id="@+id/attr_spinner_menu"
                    style="@style/kiddieAttrSpinnerStyle"
                    android:focusable="true"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC"
                android:contentDescription="@null"/>

            <LinearLayout style="@style/kiddieAttributesStyle">

                <TextView
                    android:id="@+id/attr_bathrooms_label"
                    style="@style/kiddieAttrLabelStyle"
                    android:text="@string/attr_bathrooms_label"
                    android:labelFor="@+id/attr_spinner_bathrooms"/>

                <Spinner
                    android:id="@+id/attr_spinner_bathrooms"
                    style="@style/kiddieAttrSpinnerStyle"
                    android:focusable="true"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC"
                android:contentDescription="@null"/>

            <LinearLayout style="@style/kiddieAttributesStyle">

                <TextView
                    android:id="@+id/attr_equip_rental_label"
                    style="@style/kiddieAttrLabelStyle"
                    android:text="@string/attr_equip_rental_label"
                    android:labelFor="@+id/attr_spinner_equip_rental"/>

                <Spinner
                    android:id="@+id/attr_spinner_equip_rental"
                    style="@style/kiddieAttrSpinnerStyle"
                    android:focusable="true"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC"
                android:contentDescription="@null"/>

            <LinearLayout style="@style/kiddieAttributesStyle">

                <TextView
                    android:id="@+id/attr_programs_label"
                    style="@style/kiddieAttrLabelStyle"
                    android:text="@string/attr_programs_label"
                    android:labelFor="@+id/attr_spinner_programs"/>

                <Spinner
                    android:id="@+id/attr_spinner_programs"
                    style="@style/kiddieAttrSpinnerStyle"
                    android:focusable="true"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC"
                android:contentDescription="@null" />

            <LinearLayout style="@style/kiddieAttributesStyle">

                <TextView
                    android:id="@+id/attr_play_area_label"
                    style="@style/kiddieAttrLabelStyle"
                    android:text="@string/attr_play_area_label"
                    android:labelFor="@+id/attr_spinner_play_area"/>

                <Spinner
                    android:id="@+id/attr_spinner_play_area"
                    style="@style/kiddieAttrSpinnerStyle"
                    android:focusable="true"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/review_title"
            style="@style/reviewHeadingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review_title"
            android:labelFor="@+id/review_comments"/>

        <EditText
            android:id="@+id/review_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            android:padding="@dimen/review_external_padding"
            android:textSize="@dimen/review_comments_textsize"
            android:hint="@string/review_comments_hint"
            android:focusable="true"/>

        <LinearLayout
            android:id="@+id/ll_review_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/review_cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/user_pref_button_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel_button_label"
                style="?android:attr/buttonBarButtonStyle"
                android:focusable="true"/>

            <Button
                android:id="@+id/review_saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/user_pref_button_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/save_review_button_label"
                style="?android:attr/buttonBarButtonStyle"
                android:focusable="true"/>

        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
